# TVPsplinePSD

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: latex-pdf.yml  python-tests.yml
datasets/: __init__.py  _wdm.py  galactic_binary.py  lisa.py  lisa_noise6a.py  lisa_tdi.py  ls2.py  sobh.py
examples/: quickstart.py
notes/: ADAPTIVE_KNOT_ALLOCATION.md  VI_WARMSTART_BENCHMARK.md  ms.tex  refs.bib  tv_psd.md
notes/figures/: convergence_metrics.npz  duration_comparison_metrics.npz  sim_metrics.csv  sim_mse_coverage_metrics.npz
notes/scripts/: make_baseline_comparison.py  make_convergence_figure.py  make_duration_comparison.py  make_lisa_2x3_grid.py  make_lisa_demo.py  make_lisa_ensemble.py  make_lisa_figures.py  make_lisa_gibbs_demo.py  make_lisa_nonstationary_bias.py  make_lisa_representation_comparison.py  make_lisa_signal_demo.py  make_lisa_tdi_demo.py  make_lisa_tdi_signal_demo.py  make_lisa_transient.py  make_ls2_figures.py  make_noise6a_demo.py  make_representation_schematic.py  make_robustness_study.py  make_sim_study_figures.py
studies/: README.md  knot_coverage_simulation.py  lisa_study.py  ls2_coarse_graining_study.py  ls2_simulation_study.py
studies/lisa_gb/: README.md  lisa_common.py  lisa_gb_study.py  make_corner.py  smoke.py
studies/ollie_tdi/: COARSE_GRAINING_BENCHMARK.md  FASTSPEC_KNOT_BENCHMARK.md  LISA_COARSE_GRAINING_STUDY.md  aet_corr_summary.py  check_XYZ.py  coarse_graining_benchmark.py  fig7_sensitivity.py  fit_aet_fullband.py  fit_mojito_segment.py  fit_ollie_tdi.py  gap_compare.py  (+10 more)
tests/: conftest.py  test_adaptive_knots.py  test_datasets.py  test_fd_front_end.py  test_imports.py  test_io.py  test_ls2_analysis.py  test_model_invariants.py  test_mojito_windows.py  test_moving_periodogram.py  test_null_track_extractors.py  test_sim_study_checkpoints.py  test_time_binning.py  test_validation_and_scale.py  test_vi_warmstart.py  test_warm_start.py
tv_pspline_psd/: __init__.py  adaptive_knots.py  config.py  inference.py  io.py  joint.py  metrics.py  model.py  moving_periodogram.py  plotting.py  provenance.py  sobh_signal.py  splines.py  stationary.py  stft.py  vi.py
wdm_psd/: __init__.py  diagnostics.py  inference.py  moving_periodogram.py  plotting.py
(+42 files in other folders)
