[project]
name = "wdm-psd"
version = "0.1.0"
description = "Non-stationary noise PSD estimation with WDM tensor-product log-P-splines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.1",
    "matplotlib>=3.11.0",
    "numpyro>=0.21.0",
    "scipy>=1.13",
    "wdm-transform>=0.5.0",
]

[project.optional-dependencies]
# Realistic LISA TDI signal (jaxGB) + noise (lisatools) for the global-fit demo.
lisa = [
    "jaxgb",
    "lisaanalysistools",
    "lisaorbits",
    "gpubackendtools",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wdm_psd", "datasets"]
