[project]
name = "tv_pspline_psd"
version = "0.1.0"
description = "Non-stationary noise PSD estimation with WDM tensor-product log-P-splines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz-base>=1.2.0",
    "arviz>=1.2.0",
    "jax>=0.10.1",
    "matplotlib>=3.11.0",
    "numpyro>=0.21.0",
    "optax>=0.2.8",
    "scipy>=1.13",
    "wdm-transform>=0.5.0",
    "arviz-stats>=1.2.0",
    "arviz-plots>=1.2.0",
    "h5py>=3.16.0",
    "h5netcdf>=1.6.1",
]

[project.optional-dependencies]
studies = [
    "mojito-processor>=0.6.3",
]

# Realistic LISA TDI signal (jaxGB) + noise (lisatools) for the global-fit demo.
lisa = [
    "jaxgb",
    "lisaanalysistools",
    "lisaorbits",
    "gpubackendtools",
    "pandas",
    "ripplegw",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Existing scientific scripts intentionally use long formulas.

[tool.ruff.lint.per-file-ignores]
# Figure-generation scripts favour compact, single-line plotting statements.
"studies/paper_figures/scripts/*" = ["E402", "E702", "E731"]
"studies/ollie_tdi/aet_corr_summary.py" = ["E702"]
"studies/ollie_tdi/mojito_experiments.py" = ["E702"]
"studies/ollie_tdi/mojito_validation.py" = ["E702"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["tv_pspline_psd"]
